# optimization

./: .gitignore  CMakeLists.txt  README.txt  gold_sech.cpp  main.cpp  makefile  newton.cc  optimization  porabola.cpp  run.bat  run.sh
analisis/: Analisis.hpp  analis.sh  c_analisis.cc  c_analisis.cpp  c_analisis.h  c_analisis.hpp  decorators.hpp  ex_an.cc  ex_an.cpp
cmake/: FindPAPI.cmake
decorators/: decorators.hpp
exect/: execution.cc  execution.cpp  execution.hpp
methods/: gold_sech.cpp  makefile
methods/methods_list/: gold_sech.cpp  method_interface.hpp  newton.cc  porabola.cpp
support_by_make/: Makefile  makefile
supported/assembler/: assembling_methods.hpp
supported/parser/: parser_flags.cpp  parser_flags.hpp
target_function/: makefile
target_function/f_list/: f_list.cpp
